--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "gulp-sass": "^6.0.1",
     "gulp-sourcemaps": "^3.0.0",
     "sass": "^1.97.3"
+  },
+  "scripts": {
+    "dev": "gulp",
+    "build": "NODE_ENV=production gulp styles"
   }
 }
